--- a/hero.toml
+++ b/hero.toml
@@ -1,6 +1,6 @@
 [title]
 title = "Clue Doe"
-img = ""
+img = "https://raw.githubusercontent.com/qqwui/qqwui/refs/heads/main/fursona.webp"
 catchphrase = "My mind has escaped me."
 pronouns = [ "She/Her", "They/Them", "He/Him" ]
 
