add background image

--- a/hero.toml
+++ b/hero.toml
@@ -21,7 +21,7 @@ link = "#ccd0da"
 hover = "#acb0be"
 title = "#7287fd"
 text = "#4c4f69"
-bgimg = ""
+bgimg = "https://lofigirl.com/wp-content/uploads/2023/11/Kupla-16.9-scaled.jpg"
 
 [[urls]]
 url = "https://clue.is-a.dev"
