change title color

--- a/hero.toml
+++ b/hero.toml
@@ -19,7 +19,7 @@ background = "#eff1f5"
 widget = "#ccd0da"
 link = "#ccd0da"
 hover = "#acb0be"
-title = "#7287fd"
+title = "#ea76cb"
 text = "#4c4f69"
 bgimg = "https://lofigirl.com/wp-content/uploads/2023/11/Kupla-16.9-scaled.jpg"
 
